[package]
name = "lgv_service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
chrono = {version = "0.4.38", features = ["serde"]}
tokio = {version = "1.38.0", features = ["macros", "signal", "rt", "rt-multi-thread"]}
ads = "0.4.3"
serde_json = {version = "1.0.117", features = ["default"]}
serde_with = {version = "3.8.1"}
dotenvy = "0.15.7"
futures = {version = "0.3.30"}
anyhow = "1.0.86"
derive_more = "0.99.18"
log = "0.4.21"
log4rs = { version = "1.3.0", features = ["gzip"] }
lapin = { version = "2.3.4", default-features = false, features = ["native-tls"]  }
warp = "0.3.7"


[[bin]]
name = "lgv_service"
path = "src/bin/main.rs"

[lib]
name = "lgv_service_lib"
path = "src/lib/mod.rs"